[package]
name = "usync"
version = "0.1.0"
edition = "2018"
authors = ["kprotty"]
license = "Apache-2.0"
description = "A collection of tools for writing resource efficiency concurrent systems"
readme = "README.md"
keywords = ["mutex", "condvar", "rwlock", "once", "thread"]
categories = ["concurrency"]

[features]
default = ["full"]
full = ["std", "spin"]

spin = []
std = []

